# miles-credit

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  QUICKSTART.md  README.md  TESTING_PR.md  bench_parallel_sweep.o3015316  bench_parallel_sweep.o3018125  bench_parallel_sweep.o3018576  create_derecho_env.sh  credit-main-env-casper.o2954759  credit-main-env-derecho.o2954760  credit_smoke_test_v2.yml  credit_smoke_test_v2_025deg.yml  credit_v2.o2943764  credit_v2.o2943792  credit_v2.o2943935  credit_v2.o2944133  credit_v2.o2944298  credit_v2.o2946341  credit_v2.o2950370  domain2_test.o3012649  domain2_test.o3012743  domain2_test.o3012788  environment-unet.yml  environment_cpu.yml  environment_gpu.yml  fsdp2_parallel_test.o3010048  fsdp2_parallel_test.o3010857  fsdp2_parallel_test.o3010869  fsdp2_parallel_test.o3010876  fsdp2_parallel_test.o3011107  fsdp2_parallel_test.o3012334  fsdp2_parallel_test.o3012336  fsdp2_parallel_test.o3012517  fsdp2_parallel_test.o3012531  fsdp2_parallel_test.o3012873  fsdp2_parallel_test.o3013297  fsdp_policy_test.o2975550  (+160 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Paper_Figs/: Conservation_Figs.ipynb  Development_Climate.ipynb  ENSO.ipynb  Figure_ZES.ipynb  LF_EOFS.ipynb  Modes_of_Var.ipynb  plot_config_template.yml
applications/: Quick_Climate_Year.py  Quick_Climate_Year_SaveEvery.py  Quick_Climate_Year_Slow.py  Quick_Climate_Year_Slow_infinite_MA.py  Quick_Climate_Year_Slow_parrallel.py  Quick_Climate_Year_Slow_parrallel_MA.py  Quick_Climate_Year_Slow_parrallel_residual.py  api.py  benchmark_parallelism.py  calc_global_solar.py  compare_wb2_metrics.py  convert_checkpoint.py  data_server.py  ensemble_eval.py  ensemble_skill_eval.py  ensemble_wb2_verif.py  eval.py  eval_weatherbench.py  gefs_init.py  gefs_init_climo.py  gfs_init.py  gfs_init_climo.py  goes_generate_valid_times.py  goes_rollout_to_netcdf.py  goes_train.py  graph_edges.py  graph_edges_knn.py  graph_edges_spread.py  graph_edges_spread_gauss.py  graph_edges_with_radius.py  grid_to_grid_edges.py  hres_wb2_verif.py  launcher.py  make_ensemble_aiwq.py  model_summary.py  plot_weatherbench.py  predict.py  prepare_forecast.py  prepare_init.py  prepare_init_old.py  (+38 more)
climate/: COUPLING_EXAMPLE.py  Collect_Climate_RMSE.out  Get_Coupling_Vars.py  JC32_Collect_Climate_RMSE.out  JC32_full_Collect_Climate_RMSE.out  Load_Model_FSDP.py  Look_at_Tens.ipynb  MODEL_STATE_README.md  Make_Climate_Initial_Conditions.py  Make_SSTs.ipynb  Model_State.py  Post_Process.py  QUICK_REFERENCE.md  QuickStart.md  Quick_Climate.py  Quick_Climate_Deprecated.py  Quick_Climate_Ensembles.py  Quick_Climate_Infite.py  Quick_Climate_Year_Slow_parrallel_opt.py  README.md  README_Coupling.md  REFACTORING_SUMMARY.md  RUN_Climate_RMSE.out  RunQuickClimate-Copy1.sh  RunQuickClimate-Copy2.sh  RunQuickClimate.sh  RunQuickClimate_02.sh  RunQuickClimate_03.sh  Run_Init_Condition.sh  Run_Post_Process.sh  Run_Post_Process_2.sh  Stage_Files_Climate.py  Start_Cam_Serve.sh  Start_Cam_Serve_Derecho.sh  WindPP.py  __init__.py  be21_coupled-v2025.2.0_small.yml  be21_coupled-v2025.2.0_small_future.yml  camulator_config.yml  camulator_server.py  (+10 more)
config/: AIWQ_s2s_realtime.yml  README.md  aiwq_realtime.yml  aiwq_realtime_new.yml  camulator_veros.yml  cesm_1deg.yml  cesm_1deg_physics.yml  conus404.yml  conus404_smoke.yml  credit_test_yaml.yaml  domain2_test.yml  domain_parallel_test.yml  downscaling.yml  era5_new_data_config.yaml  example-regional.yml  example-v2025.2.0.yml  example-v2026.1.0.yml  example-v2026.2.yml  example.yml  example_ensemble_eval.yml  example_eval.yml  example_physics_mlevel.yml  example_physics_single.yml  example_skebs.yml  finetune_final.yaml  fsdp2_parallel_test.yml  gfs_init.yml  gfs_init_test.yml  goes_debug.yml  goes_era5_forcing.yml  goes_era5_forcing_test.yml  goes_example.yml  graph_1deg_test.yml  ic_opt_example.yml  model_multi_example-v2025.2.0.yml  mom_samudra_example.yml  multi_source_data.yaml  om4_samudra_example.yml  regional_smoke_test.yml  regional_train.yml  (+21 more)
config_goes/: example_eval.yml  goes_crps.yml  goes_era5_forcing.yml  goes_example.yml
credit/: Quick_Climate_Year.py  __init__.py  _version.py  animation.py  attend.py  boundary_padding.py  cli.py  count_channels.py  credit_for_ptype.py  credit_ptype.py  data.py  data_downscaling.py  datamap.py  diff_lap.py  diff_lap_vec.py  diffusion.py  diffusion_utils.py  distributed.py  forecast.py  gefs.py  goes_metrics.py  grid.py  ic_perturb.py  interp.py  loss.py  loss_downscaling.py  metrics.py  metrics_downscaling.py  nwp.py  output.py  output_downscaling.py  output_gen2.py  parser.py  pbs.py  physics_constants.py  physics_core.py  pol_lapdiff_filt.py  postblock.py  preblocks.py  registry.py  (+14 more)
notebooks/: Check_postblock_prediction.ipynb  ERA5_distributed_data_example.ipynb  ERA5_streamlined_dataset.ipynb  bred_vectors.ipynb  camulator_tutorial_experiments.ipynb  cf-output.ipynb  clip_mpas.ipynb  combined_plots.ipynb  dask-hist-Copy1.ipynb  dask-hist.ipynb  debug_mpas_verif.ipynb  ensemble_ic_perturbations.ipynb  era5_interp.ipynb  eval_test.ipynb  fss_dev.ipynb  generate_MPAS_eval_timesteps.ipynb  goesViz.ipynb  goesViz_IC_first.ipynb  goesViz_mean.ipynb  goesViz_members.ipynb  goesViz_members_diff.ipynb  goes_dec_baseline.ipynb  goes_inittime_figures.ipynb  goes_make_baselines.ipynb  goes_rollout_dev.ipynb  goes_viz_training_log.ipynb  interp_era5_to_goes.ipynb  manual_FSS.ipynb  model_QTOT.yml  multistep_datasets.ipynb  processMPAS.ipynb  processMPAS_post.ipynb  re-process_verif.ipynb  viz_ensemble_eval.ipynb
scripts/: base_dataset_example.py  build_env_casper.sh  build_env_derecho.sh  casper.sh  casper_bench_sweep.sh  casper_download_zoo_weights.sh  casper_fsdp2_test.sh  casper_fsdp_test.sh  casper_gen2.sh  casper_model_zoo.sh  casper_model_zoo_smoke.sh  casper_model_zoo_train.sh  casper_preset_test.sh  casper_regional_smoke.sh  casper_train_sweep.sh  casper_v2.sh  casper_wb2_eval.sh  casper_wb2_verif.sh  compute_wb2_stats.py  derecho_025deg_sweep.sh  derecho_fsdp2_test.sh  derecho_model_zoo.sh  derecho_v1.sh  (+23 more)
(+770 files in other folders)
