[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "miles-credit"
authors = [{ name = "NCAR Machine Integration and Learning for Earth Systems (MILES)", email = "miles@ucar.edu" }]
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "cartopy",
    "scikit-learn",
    "h5py<=3.14.0",
    "pyarrow",
    "pysteps",
    "xarray",
    "netcdf4",
    "h5netcdf",
    "torch",
    "torchvision",
    "einops",
    "pyyaml",
    "zarr",
    "pygrib",
    "numcodecs",
    "echo-opt",
    "bridgescaler",
    "segmentation-models-pytorch",
    "haversine",
    "pvlib",
    "torch-harmonics",
    "torch_geometric",
    "torchmetrics",
    "fsspec",
    "gcsfs",
    "s3fs",
    "setuptools_scm",
    "setuptools",
    "numba",
    "s3fs",
    "tensorboard"
]

[project.optional-dependencies]
docs = ["sphinx",
    "sphinx-autoapi",
    "myst_parser",
    "sphinx-book-theme"]

develop = ["pre-commit",
    "sphinx",
    "sphinx-autoapi",
    "myst_parser",
    "sphinx-book-theme",
    "jupyter",
    "ruff",
    "pytest"]

ptype = ["metpy",
         "miles-guess",
         "keras"]

ask    = ["anthropic>=0.40", "groq>=0.9", "openai>=1.0", "google-generativeai>=0.8"]
agent  = ["anthropic>=0.40"]
serve  = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[tool.setuptools]

packages = ["credit.applications", "credit", "credit.models", "credit.models.wxformer", "credit.metadata", "credit.datasets",
    "credit.trainers", "credit.losses", "credit.transforms", "credit.postblock", "credit.ocean"]

[tool.setuptools.package-data]
"credit.metadata" = ["*.yaml", "*.yml", "*.nc", "*.csv"]

[tool.setuptools_scm]
version_file = "credit/_version.py"

[project.scripts]
# Unified CLI (recommended)
credit = "credit.cli:main"

# Gen2 entry points
credit_train_gen2 = "credit.applications.train_gen2:main_cli"
credit_rollout_realtime_gen2 = "credit.applications.rollout_realtime_gen2:main"
credit_rollout_to_netcdf_gen2 = "credit.applications.rollout_to_netcdf_gen2:main"

# Gen1 entry points
credit_train_gen1 = "credit.applications.train_gen1:main_cli"
credit_train = "credit.applications.train_gen1:main_cli"  # backward-compat alias
credit_rollout_realtime = "credit.applications.rollout_realtime:main_cli"
credit_gfs_init = "credit.applications.gfs_init:main"
credit_gefs_init = "credit.applications.gefs_init:main"
credit_rollout_to_netcdf = "credit.applications.rollout_to_netcdf:main"
credit_rollout_metrics = "credit.applications.rollout_metrics:main"
credit_calc_global_solar = "credit.applications.calc_global_solar:main"
credit_train_wrf = "credit.applications.train_wrf:primary_main"
credit_train_wrf_multi = "credit.applications.train_wrf_multi:primary_main"
credit_train_les = "credit.applications.train_les:primary_main"
credit_rollout_wrf = "credit.applications.rollout_wrf:main"
credit_rollout_les = "credit.applications.rollout_les:main"

[tool.ruff]
src = ["credit", "applications", "tests"]
line-length = 120
exclude = ["notebooks/**"]

[tool.ruff.lint]
ignore = ["D417", "F841"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

